# openstudyindia_bakend

./: .env.prod.example  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-03-19_init.py  2026-03-23_init.py  2026-03-24_fix_timezone.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  auth.py  exam.py  examp.py  goals.py  study_plan.py  study_session.py  subjects.py  topic.py  users.py
backend/app/core/: config.py
backend/app/db/models/: __init__.py  exam.py  goal.py  study_plan.py  study_session.py  subjects.py  topic.py  user.py
backend/app/repositories/: __init__.py  exam.py  goal.py  study_plan.py  study_session.py  subject.py  topic.py  user.py
backend/app/schemas/: __init__.py  custom_page.py  exam.py  examp.py  goal.py  study_plan.py  study_session.py  subject.py  topic.py
backend/app/services/: __init__.py  exam.py  examp.py  goal.py  study_plan.py  study_session.py  subject.py  topic.py  user.py
backend/cli/: commands.py
backend/tests/: test_core.py
docs/: adding_features.md  architecture.md  patterns.md
personal_study_tracker/: README.md  pubspec.yaml
personal_study_tracker/android/app/: build.gradle.kts
personal_study_tracker/android/app/src/main/: AndroidManifest.xml
personal_study_tracker/ios/Runner/: Info.plist
personal_study_tracker/ios/Runner.xcodeproj/: project.pbxproj
personal_study_tracker/lib/: main.dart
personal_study_tracker/lib/core/: service_locator.dart
personal_study_tracker/lib/core/config/: app_config.dart
personal_study_tracker/lib/core/errors/: app_exception.dart  failure.dart
personal_study_tracker/lib/core/network/: api_client.dart
personal_study_tracker/lib/core/utils/: error_handler.dart
personal_study_tracker/test/: widget_test.dart
personal_study_tracker/web/: index.html  manifest.json
(+37 files in other folders)
