[project]
name = "openstudyindia"
version = "0.1.0"
description = "A FastAPI project"
requires-python = ">=3.12"
authors = [{ name = "chandan0000", email = "kumarchandan41u@gmail.com" }]

dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "orjson>=3.11.6",
    "logfire[fastapi,asyncpg]>=4.29.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "greenlet>=3.0.0",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.22",
    "fastapi-pagination>=0.15.10",
    "click>=8.3.1",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "anyio[trio]>=4.12.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[project.scripts]
openstudyindia = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.fastapi-fullstack]
generator_version = "0.1.18"
generated_at = "2026-03-19T17:23:35.248772+00:00"
